--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://api.xposed.info/' }        
+        maven { url 'https://api.xposed.info/' }
     }
-	
+
     dependencies {
-	// https://developer.android.com/studio/releases/gradle-plugin
+        // Use the latest stable version
         classpath 'com.android.tools.build:gradle:8.7.3'
     }
 }
@@ -20,5 +20,5 @@ allprojects {
 }
 
 tasks.register('clean', Delete) {
-    delete rootProject.getLayout().getBuildDirectory()
+    delete rootProject.buildDir
 }
